# apex

./: .dockerignore  CMakeLists.txt  Dockerfile  Dockerfile-CLion  GQT.cpp  GQT.hpp  Makefile  Makefile.md  README.md  _config.yml  cisMapping.cpp  cisMapping.hpp  dataParser.hpp  fitModels.cpp  fitModels.hpp  fitUtils.cpp  fitUtils.hpp  genotypeData.cpp  genotypeData.hpp  get_dependencies.sh  htsWrappers.cpp  htsWrappers.hpp  htslib.cmake  mapID.cpp  mapID.hpp  mathStats.cpp  mathStats.hpp  metaAnalysis.cpp  metaAnalysis.hpp  miscUtils.cpp  miscUtils.hpp  processVCOV.cpp  processVCOV.hpp  r01_cis.md  readBED.cpp  readBED.hpp  readTable.cpp  readTable.hpp  requirements.txt  rmath.cmake  (+4 more)
BRENT/: brent_fmin.cpp
doc/: Input_files.md  Mode_cis.md  README.md  _config.yml  benchmarking.md  input_files.md  mmode_cis.md  mode_cis.md  mode_meta.md  mode_trans.md
doc/benchmarking/: README.md
doc/input_files/: README.md
doc/mode_cis/: README.md
doc/mode_factor/: README.md
doc/mode_lmm/: README.md
doc/mode_meta/: README.md
doc/mode_store/: README.md
doc/mode_trans/: README.md
docs/: index.md
src/: GQT.cpp  GQT.hpp  Main.cpp  Main.hpp  apexLMM.cpp  apexLMM.hpp  cisMapping.cpp  cisMapping.hpp  cli.cpp  cli.hpp  dataParser.hpp  eigenData.cpp  eigenData.hpp  fitModels.cpp  fitModels.hpp  fitUtils.cpp  fitUtils.hpp  genotypeData.cpp  genotypeData.hpp  htsWrappers.cpp  htsWrappers.hpp  mapID.cpp  mapID.hpp  mathStats.cpp  mathStats.hpp  metaAnalysis.cpp  metaAnalysis.hpp  miscUtils.cpp  miscUtils.hpp  processVCOV.cpp  processVCOV.hpp  readBED.cpp  readBED.hpp  readTable.cpp  readTable.hpp  rmathWrappers.cpp  rmathWrappers.hpp  scanSignals.cpp  setOptions.cpp  setOptions.hpp  (+7 more)
src/BRENT/: brent_fmin.hpp
tests/: CMakeLists.txt  cis_gene_table_reader.cpp  cis_gene_table_reader.h  cis_long_table_reader.cpp  cis_long_table_reader.h  meta_stepwise_reader.cpp  meta_stepwise_reader.h  meta_svar_reader.cpp  meta_svar_reader.h  reader_util.h  test_cis.cpp  test_meta.cpp  test_rmath.cpp  test_store.cpp
tests/data/: bkward.bed.gz.tbi  bkward.cis_gene_table.txt.gz.csi  bkward.cis_meta.stepwise.tsv  bkward.cis_meta.stepwise_het.tsv  bkward.cis_sumstats.txt.gz.csi  bkward.vcov.idx.gz.csi  check_joint_cov_flips.cis_meta.stepwise.tsv  check_joint_cov_flips.cis_sumstats.txt.gz.csi  check_joint_cov_flips.vcov.idx.gz.csi  legacy_test.bed  legacy_test.bed.gz.tbi  legacy_test.vcf.gz.tbi  long_double_pval.cis_gene_table.txt.gz.csi  long_double_pval.cis_meta.stepwise_het.tsv  long_double_pval.cis_sumstats.txt.gz.csi  long_double_pval.vcov.idx.gz.csi  pval0.bed  pval0.bed.gz.tbi  pval0.cis_gene_table.txt.gz.csi  pval0.cis_meta.stepwise.tsv  pval0.cis_meta.stepwise_het.tsv  pval0.cis_meta.svar.tsv  pval0.cis_sumstats.txt.gz.csi  pval0.vcf.gz.tbi  pval0.vcov.idx.gz.csi  simple_pvalue.bed  simple_pvalue.bed.gz.tbi  simple_pvalue.cis_gene_table.txt.gz.csi  simple_pvalue.cis_meta.stepwise.tsv  simple_pvalue.cis_meta.stepwise_het.tsv  simple_pvalue.vcf.gz.tbi  simple_pvalue.vcov.idx.gz.csi
